# small-blocks

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.txt  ideas.txt
2d-collisions/: TODO.txt  body.js  index.html  keycode.js  main.js  math.js  style.css
2d-explorations/: ideas.txt  index.js  package.json
2d-explorations/public/: index.html  main.css  main.js  universe1.js
assets/shaders/: block.vert  crosshair.frag  crosshair.vert  highlight.frag  highlight.vert
dependencies/freetype-gl/: CMakeLists.txt  opengl.h
dependencies/freetype-gl/demos/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb/: CMakeLists.txt
public/: debug.js  fractals.js  index.html  main.js  universe2.js  universe3.js  world.js
recurse-builder/: CMakeLists.txt  recurse-builder.sln
recurse-builder/recurse-builder/: recurse-builder.cc  recurse-builder.vcxproj  recurse-builder.vcxproj.filters
recurse-builder/src/: main.cc
src/: block.cc  block.h  fractals.cc  fractals.h  game.cc  game.h  geometry.cc  geometry.h  input.cc  input.h  input_system.cc  input_system.h  key_code.h  main.cc  material.cc  material.h  mesh.cc  mesh.h  physics.cc  physics.h  renderer.cc  renderer.h  text.cc  text.h  utilities.cc  utilities.h  window.cc  window.h
